<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:orientation="vertical"
tools:context=".Registre">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:text="Pagina De Registro"
    android:textSize="30dp"
    android:textStyle="bold" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Username:"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:hint="Enter a valid username"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textColorHint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Email:"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:hint="Enter your email"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textColorHint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Password:"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:hint="Enter a valid password"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textColorHint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Password:"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPass2"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:hint="Enter the password again"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textColorHint="@color/black" />

    <CheckBox
        android:id="@+id/cbTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Confirmo que he leido bla bla bla" />

    <CheckBox
        android:id="@+id/cbNoti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Deseo recibir notificaciones" />

    <Button
        android:id="@+id/register"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button"
        android:text="Register"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        app:backgroundTint="@color/dark_blue"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="18dp" />

</LinearLayout>

</LinearLayout>